# hamurusti

./: Cargo.toml  README.md
src/: city.rs  interact.rs  main.rs
src/city/: mean.rs
