[package]
name = "hamurusti"
version = "0.1.1"
authors = ["candolle <61041952+candolle@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-format = "0.4"
rand = "0.7"
textwrap = { version = "0.12", features = ["terminal_size"] }
